<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- EditText για αναζήτηση -->
        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="Search for tracks"
            android:padding="8dp" />

        <!-- Κουμπί Αναζήτησης -->
        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="Search" />

        <!-- Προοδευτική γραμμή -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!-- RecyclerView για τα αποτελέσματα -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1" />

        <!-- Διάταξη με εξώφυλλο, τίτλους και κουμπιά -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <!-- Εικόνα Εξώφυλλου Άλμπουμ -->
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="Album cover"
                android:scaleType="centerCrop"
                android:src="@drawable/music" />

            <!-- Ονομασία τραγουδιού και καλλιτέχνη -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp">

                <TextView
                    android:id="@+id/SongTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Song Title"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ArtistTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Artist Title"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <!-- Κουμπιά σε κατακόρυφη διάταξη -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

            </LinearLayout>
        </LinearLayout>

        <!-- SeekBar -->
        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <!-- Κουμπιά Αναπαραγωγής -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/PrevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:text="PREV" />

            <Button
                android:id="@+id/PlayPauseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#2196F3"
                android:text="PLAY" />

            <Button
                android:id="@+id/NextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:text="NEXT" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>